fixed bug with tournamentCodes made it easier to scroll past textareas on mobile

--- a/analysis.css
+++ b/analysis.css
@@ -56,4 +56,12 @@
         /* font-weight: normal !important; */
         white-space: inherit  !important;
     }
+    #factionSelection,
+    #commanderSelection,
+    #tournamentSelection,
+    #playerSelection,
+    #cardSelection,
+    #opposingCardSelection {
+        padding-right:50px;
+    }
 }
